Polishing in PropertySelection
See gh-723